--- a/package.json
+++ b/package.json
@@ -11,21 +11,24 @@
     "chai-spies": "0.7.1"
   },
   "dependencies": {
-    "@angular/common": "2.0.0-rc.4",
+    "@angular/common": "^2.0.0-rc.4",
     "@angular/compiler": "2.0.0-rc.4",
-    "@angular/core": "2.0.0-rc.4",
+    "@angular/core": "^2.0.0-rc.4",
     "@angular/forms": "0.2.0",
-    "@angular/platform-browser": "2.0.0-rc.4",
-    "@angular/platform-browser-dynamic": "2.0.0-rc.4",
+    "@angular/platform-browser": "^2.0.0-rc.4",
+    "@angular/platform-browser-dynamic": "^2.0.0-rc.4",
     "@angular/router": "3.0.0-alpha.8",
-    "angular2-meteor": "0.6.2",
-    "angular2-meteor-auto-bootstrap": "0.6.0",
+    "@angular/router-deprecated": "^2.0.0-rc.2",
+    "angular2-meteor": "https://registry.npmjs.org/angular2-meteor/-/angular2-meteor-0.6.2.tgz",
+    "angular2-meteor-accounts-ui": "https://registry.npmjs.org/angular2-meteor-accounts-ui/-/angular2-meteor-accounts-ui-0.6.1.tgz",
+    "angular2-meteor-auto-bootstrap": "https://registry.npmjs.org/angular2-meteor-auto-bootstrap/-/angular2-meteor-auto-bootstrap-0.6.0.tgz",
     "angular2-meteor-polyfills": "0.1.1",
     "angular2-meteor-tests-polyfills": "0.0.2",
+    "bcrypt": "^0.8.7",
     "es6-shim": "0.35.1",
     "meteor-node-stubs": "0.2.3",
-    "reflect-metadata": "0.1.3",
-    "rxjs": "5.0.0-beta.6",
+    "reflect-metadata": "https://registry.npmjs.org/reflect-metadata/-/reflect-metadata-0.1.3.tgz",
+    "rxjs": "https://registry.npmjs.org/rxjs/-/rxjs-5.0.0-beta.6.tgz",
     "zone.js": "0.6.12"
   }
 }
